tests/parse_print/random_perturb/enum_liberated/change-06/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/enum_liberated/change-06/change-06.essence:3:19:
unexpected Knum
expecting enum
    given E1 new type Knum
                      ^